--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,26 +12,18 @@
   --body_font: Archivo, Arial, sans-serif;
 }
 
-/* page details */
+/* images */
 
-.title_one {
+.hero {
+  width: 20%;
   display: block;
-  color: var(--base_color);
-  font-size: 800%;
-  text-align: center;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 25px;
 }
 
-.title_two {
-  color: var(--base_color);
-  font-size: 50px;
-  margin: auto;
-}
-
-.header-social li {
-  display: inline-block;
-}
-
-/* Chat button in bottom right corner */
+/* chat button in bottom right corner */
 .chat_button {
     background-color: var(--accent_color);
     color: white;
@@ -54,11 +46,66 @@
   background-color: var(--base_color);
 }
 
-/* nav button animation */
+/* navagation bar */
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  font-size: 15px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+nav ul li a {
+  color: var(--nav-color);
+  text-decoration: none;
+  font-weight: bold;
+  padding: 10px;
+
+  margin: 0 15px;
+}
+
+ul {
+  list-style: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 
 .navBar {
+  position: relative;
+  display: inline-block;
   color: black;
   text-decoration: none;
+  font-size: 18px;
+  font-family: var(--heading_font);
+}
+
+.navBar::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  height: 2px;
+  width: 0;
+  background-color:  #abcda5;
+}
+
+.navBar:hover::after{
+  animation: underline_nav 0.4s ease-in-out forwards;
+}
+
+@keyframes underline_nav {
+  from {
+    width: 0;
+    background-color:  #ccf5c6;
+    
+  }
+  to {
+    width: 100%;
+    background-color:  #abcda5;
+  }
 }
 
 /* navigation transition to page section, smooth scroll */
@@ -75,32 +122,17 @@
   background-color: pink;
 }
 
-/* images */
-
-.hero {
-  width: 70%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 25px;
-}
-
-.social {
-  width: 15%;
-}
-
-/* Title tet animation */
+/* title animation */
 
 .container {
   text-align: center;
-  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   width: 100%;
 }
 
 .row {
+  text-align: center;
   margin-top: 25px;
   margin-bottom: 25px;
 }
@@ -110,9 +142,12 @@
   display: block;
   color: var(--base_color);
   font-size: 600%;
+  margin-top: 5%;
   margin-bottom: 20px;
   position: relative;
   animation: text1 3s 1;
+  text-align: center;
+
 }
 
 .text2 {
@@ -152,35 +187,4 @@
     word-spacing: 5px;
     color: #bee1b9;
   }
-}
-
-/* Navigation Bar */
-
-nav ul {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-  font-size: 15px;
-  margin-top: 25px;
-  margin-bottom: 25px;
-}
-
-nav ul li a {
-  color: var(--nav-color);
-  text-decoration: none;
-  font-weight: bold;
-  padding: 10px;
-  /* border: solid;
-  border-color: var(--main-color); */
-  margin: 0 15px;
-}
-
-ul {
-  list-style: none;
-}
-
-.navBar:hover {
-  /* border: none solid none none; */
-  border-style: none none solid none;
-  letter-spacing: 5px;
 }
